falta cierre de llave en productCart.css

--- a/public/css/productCart.css
+++ b/public/css/productCart.css
@@ -235,7 +235,7 @@ main.product-cart section.ver-mas{
         border: 1px solid #ff523b;
         color:#ff523b;
     }
-    
+}
 @media(min-width:769px){
     
     main.product-cart .agrup-tabla-envio section.prod-tabla,
