detalles del producto- imagenes

--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/productCart.css">
-        <link rel="stylesheet" href="css/productDetail.css">
+        <link rel="stylesheet" href="/public/css/productDetail.css">
     </head>
     <body>
         <header>
@@ -62,19 +62,19 @@
     <main class="product-detail">
     <section class="container">
             <div class="columna">
-                <img src="/images/productos/remeras/remera0.jpg" id= "ProductImg" alt="REMERA THE NEW OLD SCHOOL [ PIRANHA N2 BLANCO ]" width="100%">
+                <img src="/images/productos/remeras/remera1.1.jpg" id= "ProductImg" alt="REMERA THE NEW OLD SCHOOL - LISA" width="100%">
                 <div class="small-img-row">
                     <div class="small-img">
-                        <img src="/images/productos/remeras/remera0.jpg" alt="REMERA THE NEW OLD SCHOOL [ PIRANHA N2 BLANCO ]" width="100%" class="small-img">
+                        <img src="/images/productos/remeras/remera1.1.jpg" alt="REMERA THE NEW OLD SCHOOL - LISA" width="100%" class="small-img">
                     </div>
                     <div class="small-img">
-                        <img src="/images/productos/remeras/remera1.jpg" alt="REMERA THE NEW OLD SCHOOL [ PIRANHA N2 MALTINTO ]" width="100%" class="small-img">
+                        <img src="/images/productos/remeras/remera1.2.jpg" alt="REMERA THE NEW OLD SCHOOL - LISA" width="100%" class="small-img">
                     </div>
                     <div class="small-img">
-                        <img src="/images/productos/remeras/remera2.jpg" alt="REMERA THE NEW OLD SCHOOL [ PIRANHA N2 MENTA ]" width="100%" class="small-img">
+                        <img src="/images/productos/remeras/remera1.3.jpg" alt="REMERA THE NEW OLD SCHOOL - LISA" width="100%" class="small-img">
                     </div>
                     <div class="small-img">
-                        <img src="/images/productos/remeras/remera3.jpg" alt="REMERA THE NEW OLD SCHOOL [ PIRANHA N2 NEGRO ]" width="100%" class="small-img">
+                        <img src="/images/productos/remeras/remera1.3.jpg" alt="REMERA THE NEW OLD SCHOOL -LISA" width="100%" class="small-img">
                     </div>
                 </div>
             </div>
@@ -86,19 +86,19 @@
                         <div class="elec-talle">
                         <label for="prod-talle">Talle:</label>
                             <select name="prod-talle" id="prod-talle">
-                                <option value="s" selected>  S </option>
-                                <option value="m">  M </option>
-                                <option value="l">  L </option>
+                                <option value="s" selected>  XS </option>
+                                <option value="m">  S </option>
+                                <option value="l">  M </option>
                                 <option value="xl"> XL </option>
                             </select>
                         </div>
                         <div class="elec-color">
                         <label for="prod-color">Color:</label>
                             <select name="prod-color" id="prod-color">
-                                <option value="#ffffff"selected>blanco</option>
-                                <option value="#696e6c">gris</option>
-                                <option value="#18c97a">verde</option>
-                                <option value="#000000">negro</option>
+                                <option value="#ffffff"selected> Marron</option>
+                                <option value="#696e6c">Negro</option>
+                                <option value="#18c97a">Amarillo</option>
+                                <option value="#000000">Gris</option>
                             </select>
                         </div>
                     </div>
@@ -114,75 +114,64 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia culpa aliquam perspiciatis eaque quibusdam, hic distinctio error perferendis doloribus ab, nisi deserunt velit minima enim. Officiis laboriosam vero ullam autem?</p>
             </div>
     </section>
-    <h3>TAMBIÉN TE PUEDE INTERESAR</h3>
-        <section class="sec-carrousel">
-                <i class="fas fa-arrow-left"></i>
-                <article class="product">
-                    <img src="/images/productos/accesorios/billetera-colgante-tigre.jpg" alt="billetera-colgante-tigre">
-                    <div class="product-description">
-                            <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </article>
-
-                    <article class="product">
-                        <img src="/images/productos/accesorios/billetera-collar-azul.jpg" alt="billetera-collar-azul">
-                        <div class="product-description">
-                            <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
-                        </div>
-                        </article>
-
-                    <article class="product">
-                        <img src="/images/productos/accesorios/tapaboca-trady-blanco.jpg" alt="tapaboca-trady-blanco">
-                        <div class="product-description">
-                            <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </article>
-
-                    <article class="product">
-                        <img src="/images/productos/accesorios/billetera-colgante-tigre.jpg" alt="billetera-colgante-tigre">
-                        <div class="product-description">
-                            <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </article>
-
-                    <article class="product">
-                        <img src="/images/productos/accesorios/billetera-collar-azul.jpg" alt="billetera-collar-azul">
-                        <div class="product-description">
-                            <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </article>
-
-                    <article class="product">
-                        <img src="/images/productos/accesorios/tapaboca-trady-blanco.jpg" alt="tapaboca-trady-blanco">
-                        <div class="product-description">
-                            <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </article>
-                    <i  id ="i-carrousel" class="fas fa-arrow-right"></i>
-            </section>
-            <section class="ver-mas">
-                <p>Ver más productos</p>
-                <button type="submit"><i class="fas fa-arrow-down"></i></button>
-            </section>
     </main>
+
+    <section id="featured" class="mas">
+        <div class="conteiner">
+            <h3>TAMBIÉN TE PUEDE INTERESAR</h3>
+            <hr>
+        </div>
+        <div class="row">
+            <div class="product">
+                <img class= "img-more" src="/public/images/productos/remeras/remera2.1.jpg" alt="REMERA THE NEW OLD SCHOOL - CANALLA N1">
+                <div class="p-details">
+                    <p class="p-price">$2.750</p>
+                    <p class="descuentos">20% off</p>
+                    <p class="p-name">REMERA THE NEW OLD SCHOOL <br> CANALLA N1</p>
+                    <button class="buy-btn">
+                        VER 
+                    </button>
+                </div>
+            </div>
+            
+            <div class="product">
+                <img class= "img-more" src="/public/images/productos/remeras/remera3.1.jpg" alt="REMERA THE OLD SCHOOL CANALLA N4">
+                <div class="p-details">
+                    <p class="p-price">$2.750</p>
+                    <p class="descuentos">20% off</p>
+                    <p class="p-name">REMERA THE OLD SCHOOL <br> CANALLA N4</p>
+                    <button class="buy-btn">
+                        VER 
+                    </button>
+                </div>
+            </div>
+
+            <div class="product">
+                <img class= "img-more" src="/public/images/productos/remeras/remera4.1.jpg" alt="REMERA THE OLD SCHOOL - CANALLA N6">
+                <div class="p-details">
+                    <p class="p-price">$2.750</p>
+                    <p class="descuentos">20% off</p>
+                    <p class="p-name">REMERA THE OLD SCHOOL <br> CANALLA N6</p>
+                    <button class="buy-btn">
+                        VER 
+                    </button>
+                </div>
+            </div>
+
+            <div class="product">
+                <img class= "img-more" src="/public/images/productos/remeras/remera5.4.jpg" alt="REMERA ON">
+                <div class="p-details">
+                    <p class="p-price">$2.750</p>
+                    <p class="descuentos">20% off</p>
+                    <p class="p-name">REMERA ON</p>
+                    <button class="buy-btn">
+                        VER 
+                    </button>
+                </div>
+            </div>
+        </div>
+        
+    </section>
 
     <footer>
         <div class="futer">
