--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -94,128 +94,84 @@ main.product-detail h3.desc-prod{
     text-align: left;
 }
 
-main.product-detail section.sec-carrousel i.fas.fa-arrow-left, 
-main.product-detail section.sec-carrousel i.fas.fa-arrow-right{
-    display: none;
-}
-main.product-detail section.sec-carrousel{
-    padding: 10px 5px;
-    display: flex;
-    flex-wrap: wrap;
-}
-main.product-detail section.sec-carrousel article.product{
-    border: 1px solid black;
-    width: 100%;
-    margin: 1px;
-    display: flex;
-    flex-wrap: wrap;
-}
-main.product-detail section.sec-carrousel article.product img{
-    width: 100%;
-    height: auto;
-}
-main.product-detail section.sec-carrousel article.product .product-description{
-    position: relative;
-    width: 100%;
-    text-align: center;
-    padding: 10px;
-    border-top: 1px solid black;
-}
-main.product-detail section.sec-carrousel  article.product i{
-    color: black;
-    background-color: rgba(255, 255, 255, 0.82);
-    font-size:16px;
-    position: absolute;
-    top: -80px;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    text-align: center;
-    border: 1px solid black;
-    padding: 5px;
-    box-shadow: 0px 0px 10px rgb(100 100 100);
-}
-main.product-detail section.sec-carrousel article.product p.cuotas{
-    font-size: 12px;
-}
-main.product-detail section.ver-mas{
-    display: none;
-}
-main.product-detail section.ver-mas{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding:10px;
-    font-family: sans-serif;
-    align-items: center;
-    text-transform: uppercase;
-    font-weight: bolder;
-}
-main.product-detail section.ver-mas button{
-    border: none;
-    border-radius: 15px;
-    color:black;
-    width: 15%;
-    height: 30px;
-    font-size: 24px;
-}
-@media(min-width:361px){
-    main.product-detail  {
-        width: 80%;
-        margin: 0px auto;
-    }
-    main.product-detail section.sec-carrousel article.product{
-        width: 48%;
-    }
-    main.product-detail section.container{
-        display: flex;
-        flex-wrap: nowrap;
-    }
-    main.product-detail section.container .columna h2 {
-        text-align: left;
-        font-size: 26px;
-    }
-    main.product-detail section.container .columna form button:hover{
-        color:#ff523b;
-    }
-    main.product-detail section.container .columna form button:active{
-        color:#ff523b;
-        background-color: white;
-        border: 1px solid #ff523b;
-    }
-}
-@media(min-width:769px){
-    main.product-detail section.sec-carrousel{
-        padding: 10px 5px;
-        display: flex;
-        flex-wrap: nowrap;
-    }
-    main.product-detail section.sec-carrousel i.fas.fa-arrow-left, 
-    main.product-detail section.sec-carrousel i.fas.fa-arrow-right{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    main.product-detail section.sec-carrousel article.product{
-        width: 24%;
-        transition: height 4s;
-    }
-    main.product-detail section.sec-carrousel article.product:hover{
-        height: 30%;
-        border: 1px solid #ff523b;
-        transition-duration: 450ms;
-    }
-    main.product-detail section.sec-carrousel article.product:hover i{
-        color: #ff523b;
-        border: 1px solid #ff523b;
-        transition-duration: 450ms;
-    }
 
-    main.product-detail section.ver-mas{
-        display: none;
-    }
-    main.product-detail section.container .columna form button{
-        height: 40px;
-        font-size: 18px;
-    }
+
+.conteiner{
+    text-align: center;
+    margin-top: 5px;
+    padding-top: 5px;
+}
+
+.mas{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding-bottom: 15px;
+}
+
+
+h3{
+    margin-top: 70px;
+    margin-bottom: 5px;
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+}
+
+hr{
+    width: 30px;
+    height: 2px;
+    background-color: black;
+    margin: auto;
+    padding-bottom: 5px;
+    border: none;
+}
+
+.product{
+    text-align: center;
+    cursor: pointer;
+    margin-bottom: 2rem;
+    margin-top: 30px;
+}
+
+.buy-btn{
+    background: black;
+    color: blanchedalmond;
+    padding: 13px 30px;
+    cursor: pointer;
+    text-transform: uppercase;
+    border: none;
+    margin-top: 20px;
+}
+
+.product img{
+    transition: 0.3s all;
+}
+
+.product:hover img{
+    opacity: 0.7;
+}
+
+.product .buy-btn{
+    background: black;
+    transform: translateY(20px);
+    opacity: 0;
+    transition: 0.3s all;
+}
+
+.product:hover .buy-btn{
+    transform: translateY(0px);
+    opacity: 1;
+}
+
+.img-more{
+    height: 250px;
+    width: 200px;
+}
+
+
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
 }
