unificacion de css's

--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>x-person</title>
+    <title>X-Person | Inicio</title>
 </head>
 <body>
     <header>
@@ -75,14 +75,13 @@
         <section class="sec-carrousel">
                 <i class="fas fa-arrow-left"></i>
                 <article class="product">
-                    <a href="/detalle-producto">
-                    <img src="/images/productos/remeras/remera0.jpg" alt="REMERA THE NEW OLD SCHOOL [ PIRANHA N2 BLANCO ]">
-                </a>
+                    <img src="/images/productos/remeras/remera1.1.jpg" alt="REMERA THE NEW OLD SCHOOL [ PIRANHA N2 BLANCO ]">
                     <div class="product-description">
                             <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
+                            <p class="p-name">nombre producto</p>
+                            <p class="p-price">precio</p>
+                            <p class="p-descuentos">20% off</p>
+                            <a href="/detalle-producto"><button class="ver-btn">VER</button></a>
                         </div>
                     
                     </article>
@@ -91,52 +90,57 @@
                         <img src="/images/productos/accesorios/billetera-collar-azul.jpg" alt="billetera-collar-azul">
                         <div class="product-description">
                             <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
+                            <p class="p-name">nombre producto</p>
+                            <p class="p-price">precio</p>
+                            <p class="p-descuentos">20% off</p>
+                            <a href="#"><button class="ver-btn">VER</button></a>
                         </div>
                         </article>
 
                     <article class="product">
-                        <img src="/images/productos/accesorios/tapaboca-trady-blanco.jpg" alt="tapaboca-trady-blanco">
+                            <img src="/images/productos/accesorios/tapaboca-trady-blanco.jpg" alt="tapaboca-trady-blanco">
                         <div class="product-description">
                             <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
+                            <p class="p-name">nombre producto</p>
+                            <p class="p-price">precio</p>
+                            <p class="p-descuentos">20% off</p>
+                            <a href="#"><button class="ver-btn">VER</button></a>
                         </div>
                     </article>
 
                     <article class="product">
-                        <img src="/images/productos/accesorios/billetera-colgante-tigre.jpg" alt="billetera-colgante-tigre">
+                            <img src="/images/productos/accesorios/billetera-colgante-tigre.jpg" alt="billetera-colgante-tigre">
                         <div class="product-description">
                             <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
+                            <p class="p-name">nombre producto</p>
+                            <p class="p-price">precio</p>
+                            <p class="p-descuentos">20% off</p>
+                            <a href="#"><button class="ver-btn">VER</button></a>
                         </div>
                     </article>
 
                     <article class="product">
-                        <img src="/images/productos/accesorios/billetera-collar-azul.jpg" alt="billetera-collar-azul">
+                            <img src="/images/productos/accesorios/billetera-collar-azul.jpg" alt="billetera-collar-azul">
                         <div class="product-description">
                             <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
+                            <p class="p-name">nombre producto</p>
+                            <p class="p-price">precio</p>
+                            <p class="p-descuentos">20% off</p>
+                            <a href="#"><button class="ver-btn">VER</button></a>
                         </div>
                     </article>
 
                     <article class="product">
-                        <img src="/images/productos/accesorios/tapaboca-trady-blanco.jpg" alt="tapaboca-trady-blanco">
+                            <img src="/images/productos/accesorios/tapaboca-trady-blanco.jpg" alt="tapaboca-trady-blanco">
                         <div class="product-description">
                             <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
+                            <p class="p-name">nombre producto</p>
+                            <p class="p-price">precio</p>
+                            <p class="p-descuentos">20% off</p>
+                            <a href="#"><button class="ver-btn">VER</button></a>
                         </div>
                     </article>
-                    <i  id ="i-carrousel" class="fas fa-arrow-right"></i>
+                    <i class="fas fa-arrow-right"></i>
             </section>
             <section class="ver-mas">
                 <p>Ver más productos</p>
@@ -148,6 +152,7 @@
         <div class="futer">
             <section class="products-footer">
                 <h5>Productos</h5>
+                
                 <div class="product-list">
                     <p>Remeras</p>
                     <p>Pantalones</p>
@@ -157,6 +162,7 @@
             </section>
             <section class="social-medias">
                 <h5>Seguinos</h5>
+                
                 <div class="social-links">
                     <div><a href="#"><i class="fab fa-facebook"></i></a></div>
                     <div><a href="#"><i class="fab fa-instagram"></i></a></div>
@@ -165,6 +171,7 @@
             </section>
             <section class="contact-footer">
                 <h5>Contactanos</h5>
+                
                 <div class="contact-links">
                     <div><i class="far fa-envelope"></i><a href="#"> xperson@indefined.com</a></div>
                     <div><i class="fab fa-whatsapp"></i><a href="#"> +54 (011) 2222-4444</a></div>
