--- a/views/login.html
+++ b/views/login.html
@@ -7,9 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Login</title>
+    <title>X-Person | Inicio seccion</title>
 </head>
 <body>
     <header>
@@ -58,32 +57,33 @@
             </div> 
         </div>
     </header>
-    <main>
-        <div class="formulario">
-            <article>
-                <h1>Inciar sesión</h1>
-                <form action="/index" method="post">
-                <label for="user">Usuario:</label>
-                <p>
-                    <input type="text" name="user" required>
-                </p>
-                <label for="password">Contraseña:</label>
-                <p>
-                    <input type="password" name="password" required>
-                </p>
-                <p class="BotonEnviar">
-                    <input type="submit" value="Enviar" class="boton">
-                </p>
-                </form>
-                <div class="astrodivider"><div class="astrodividermask"></div><span><i>&#10038;</i></span></div>
-                <p class="p">
-                    ¿Perdiste tu contraseña?
-                </p>
-                <p class="p">
-                    ¿No tienes cuenta? <a href="registro">Registrate</a>
-                </p>
-            </article>
-        </div>
+    <main class="login">
+        <section class="titulos">
+            <h1>Inciar sesión</h1>
+        </section>
+        <section class=forms>
+            <form action="/index" method="post">
+                <div class="google">
+                    <button type="submit"><i class="fab fa-google"></i> Registrate con Google</button>
+                </div>
+                <div class="facebook">
+                    <button type="submit"><i class="fab fa-facebook"></i> Registrate con Facebook</button>
+                </div>
+                <div class="email">
+                    <label for="user">Email:<input type="email" value="" placeholder="ejemplo@gmail.com" required></label>
+                    
+                </div>
+                <div class="password">
+                    <label for="password">Contraseña:<input type="password" name="password" required> </label>
+                    
+                    <p>¿Olvidaste tu contraseña?</p>
+                </div>    
+                <div class="submit"><label for="submit"><button type="submit" id="submit">Iniciar sesión</button></label></div>
+            </form>
+        </section>
+        <section class="a-register">
+            ¿Todavía no tenés una cuenta? <a href="/registro">Registrate</a>
+        </section>
     </main>
     <footer>
         <div class="futer">
