--- a/views/productCart.html
+++ b/views/productCart.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/productCart.css">
+    <title>X-Person | Carrito</title>
 </head>
 <body>
     <header>
@@ -59,51 +59,53 @@
     </header>
 
     <main class="product-cart">
+        <h2>Carrito de compras</h2>
         <div class="agrup-tabla-envio">
             <section class="prod-tabla">
-                <table>
-                    <tr>
-                        <th class="talle"><p>talle</p></th>
-                        <th class="pro-imag"><img src="/images/productos/accesorios/billetera-collar-azul.jpg" alt="billetera-collar-azul"></th>
-                        <th class="pro-desc">
-                            <p class="prod-nombre">nombre del producto</p>
-                            <div class="cant-elec"><input class="menos" type="button" value= "-"><p class="cantidad">x</p><input class ="mas" type="button" value="+"></div>
-                        </th>
-                        <th class="price"><p>$XXXX</p></th>
-                        <th class="icon"><button class="eliminar" type="reset" value="eliminar"><i class="fas fa-trash-alt"></i></button></th>
-                    </tr>
-                    <tr>
-                        <th class="talle"><p>talle</p></th>
-                        <th class="pro-imag"><img src="/images/productos/accesorios/tapaboca-trady-blanco.jpg" alt="Tapabocas-trady"></th>
-                        <th class="pro-desc">
-                            <p class="prod-nombre">nombre del producto</p>
-                            <div class="cant-elec"><input class="menos" type="button" value= "-"><p class="cantidad">x</p><input class ="mas" type="button" value="+"></div>
-                        </th>
-                        <th class="price"><p>$XXXX</p></th>
-                        <th class="icon"><button class="eliminar" type="reset" value="eliminar"><i class="fas fa-trash-alt"></i></button></th>
-                    </tr>
-                    <tr>
-                        <th class="talle"><p>talle</p></th>
-                        <th class="pro-imag"><img src="/images/productos/accesorios/billetera-collar-azul.jpg" alt="billetera-collar-azul"></th>
-                        <th class="pro-desc">
-                            <p class="prod-nombre">nombre del producto</p>
-                            <div class="cant-elec"><input class="menos" type="button" value= "-"><p class="cantidad">x</p><input class ="mas" type="button" value="+"></div>
-                        </th>
-                        <th class="price"><p>$XXXX</p></th>
-                        <th class="icon"><button class="eliminar" type="reset" value="eliminar"><i class="fas fa-trash-alt"></i></button></th>
-                    </tr>
-                    <tr>
-                        <th class="talle"><p>talle</p></th>
-                        <th class="pro-imag"><img src="/images/productos/accesorios/tapaboca-trady-blanco.jpg" alt="Tapabocas-trady"></th>
-                        <th class="pro-desc">
-                            <p class="prod-nombre">nombre del producto</p>
-                            <div class="cant-elec"><input class="menos" type="button" value= "-"><p class="cantidad">x</p><input class ="mas" type="button" value="+"></div>
-                        </th>
-                        <th class="price"><p>$XXXX</p></th>
-                        <th class="icon"><button class="eliminar" type="reset" value="eliminar"><i class="fas fa-trash-alt"></i></button></th>
-                    </tr>
-                </table>
-                
+                    <article>
+                        <div class="talle"><p>talle</p></div>
+                        <div class="color"><p>color</p></div>
+                        <div class="pro-imag"><img src="/images/productos/accesorios/billetera-collar-azul.jpg" alt="billetera-collar-azul"></div>
+                        <div class="pro-desc">
+                            <p class="prod-nombre">nombre producto</p>
+                            <div class="cant-elec"><button class ="menos" type="submit" value><i class="fas fa-minus"></i></button><p class="cantidad">1</p><button class ="mas" type="submit" value><i class="fas fa-plus"></i></button></div>
+                        </div>
+                        <div class="price"><p>$XXXX</p></div>
+                        <div class="icon"><button class="eliminar" type="reset" value="eliminar"><i class="fas fa-trash-alt"></i></button></div>
+                    </article>
+                    <article>
+                        <div class="talle"><p>talle</p></div>
+                        <div class="color"><p>color</p></div>
+                        <div class="pro-imag"><img src="/images/productos/accesorios/tapaboca-trady-blanco.jpg" alt="Tapabocas-trady"></div>
+                        <div class="pro-desc">
+                            <p class="prod-nombre">nombre producto</p>
+                            <div class="cant-elec"><button class ="menos" type="submit" value><i class="fas fa-minus"></i></button><p class="cantidad">1</p><button class ="mas" type="submit" value><i class="fas fa-plus"></i></button></div>
+                        </div>
+                        <div class="price"><p>$XXXX</p></div>
+                        <div class="icon"><button class="eliminar" type="reset" value="eliminar"><i class="fas fa-trash-alt"></i></button></div>
+                    </article>
+                    <article>
+                        <div class="talle"><p>talle</p></div>
+                        <div class="color"><p>color</p></div>
+                        <div class="pro-imag"><img src="/images/productos/accesorios/billetera-collar-azul.jpg" alt="billetera-collar-azul"></div>
+                        <div class="pro-desc">
+                            <p class="prod-nombre">nombre producto</p>
+                            <div class="cant-elec"><button class ="menos" type="submit" value><i class="fas fa-minus"></i></button><p class="cantidad">1</p><button class ="mas" type="submit" value><i class="fas fa-plus"></i></button></div>
+                        </div>
+                        <div class="price"><p>$XXXX</p></div>
+                        <div class="icon"><button class="eliminar" type="reset" value="eliminar"><i class="fas fa-trash-alt"></i></button></div>
+                    </article>
+                    <article>
+                        <div class="talle"><p>talle</p></div>
+                        <div class="color"><p>color</p></div>
+                        <div class="pro-imag"><img src="/images/productos/accesorios/tapaboca-trady-blanco.jpg" alt="Tapabocas-trady"></div>
+                        <div class="pro-desc">
+                            <p class="prod-nombre">nombre producto</p>
+                            <div class="cant-elec"><button class ="menos" type="submit" value><i class="fas fa-minus"></i></button><p class="cantidad">1</p><button class ="mas" type="submit" value><i class="fas fa-plus"></i></button></div>
+                        </div>
+                        <div class="price"><p>$XXXX</p></div>
+                        <div class="icon"><button class="eliminar" type="reset" value="eliminar"><i class="fas fa-trash-alt"></i></button></div>
+                    </article>
             </section>
 
             <article class="medios-envio">
@@ -118,93 +120,99 @@
         
         <section class="resumen-compra">
             <h4>Resumen de Compra</h4>
-            <table>
-                <tr>
-                    <th><p class="subtotal">Subtotal</p></th>
-                    <th><p class="precio-subtotal">$XXXX</p></th>
-                </tr>
-                <tr>
-                    <th><p class="cupon">¿Tenés un cupón de descuento?</p></th>
-                    <th><p id=id-cupon>Ingresalo acá</p></th>
-                </tr>
-                <tr>
-                    <th><p class="envio">Envío</p> </th>
-                    <th><p class="precio-envio">$XXXX</p></th>
-                </tr>
-                <tr>
-                    <th></th>
-                    <th><p class="texto-cuotas">o hasta 6 cuotas de </p><p class="precio-cuotas">$XXX</p></th>
-                </tr>
-            </table>
+            <div>
+                <article>
+                    <div class="subtotal"><p>Subtotal</p></div>
+                    <div class="precio-subtotal"><p>$XXXX</p></div>
+                </article>
+                <article>
+                    <div class="cupon"><p>¿Tenés un cupón de descuento?</p></div>
+                    <div id=id-cupon><p>Ingresalo acá</p></div>
+                </article>
+                <article>
+                    <div class="envio"><p>Envío</p> </div>
+                    <div class="precio-envio"><p>$XXXX</p></div>
+                </article>
+                <article class="cuotas">
+                    <div class="texto-cuotas"><p>o hasta 6 cuotas de $XXX</p></div>
+                </article>
+            </div>
             <input class="iniciar-compra" type="button" value="Iniciar compra"><br>
             <a href="#">Ver más productos</a>
         </section>
         </div>
         
-        <h3>PRODUCTOS DESTACADOS</h3>
-        <section class="sec-carrousel">
-                    <i class="fas fa-arrow-left"></i>
-                    <article class="product">
-                        <img src="/images/productos/accesorios/billetera-colgante-tigre.jpg" alt="billetera-colgante-tigre">
-                        <div class="product-description">
-                            <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </article>
+        <h3>TAMBIEN TE PUEDE INTERESAR</h3>
+    <section class="sec-carrousel">
+        <i class="fas fa-arrow-left"></i>
+        <article class="product">
+                <img class= "img-more" src="/images/productos/remeras/remera2.1.jpg" alt="REMERA THE NEW OLD SCHOOL - CANALLA N1">
+                <div class="product-description">
+                    <i class="fas fa-shopping-cart"></i>
+                    <p class="p-name">REMERA THE OLD SCHOOL <br> CANALLA N1</p>
+                    <p class="p-price">$2.750</p>
+                    <p class="p-descuentos">20% off</p>
+                    <a href="#"><button class="ver-btn">VER</button></a>
+                </div>
+            </article>
+            
+            <article class="product">
+                <img class= "img-more" src="/images/productos/remeras/remera3.1.jpg" alt="REMERA THE OLD SCHOOL CANALLA N4">
+                <div class="product-description">
+                    <i class="fas fa-shopping-cart"></i>
+                    <p class="p-name">REMERA THE OLD SCHOOL <br> CANALLA N4</p>
+                    <p class="p-price">$2.750</p>
+                    <p class="descuentos">20% off</p>
+                    
+                    <a href="#"><button class="ver-btn">VER</button></a>
+                </div>
+            </article>
 
-                    <article class="product">
-                        <img src="/images/productos/accesorios/billetera-collar-azul.jpg" alt="billetera-collar-azul">
-                        <div class="product-description">
-                            <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
-                        </div>
-                        </article>
+            <article class="product">
+                <img class= "img-more" src="/images/productos/remeras/remera4.1.jpg" alt="REMERA THE OLD SCHOOL - CANALLA N6">
+                <div class="product-description">
+                    <i class="fas fa-shopping-cart"></i>
+                    <p class="p-name">REMERA THE OLD SCHOOL <br> CANALLA N6</p>
+                    <p class="p-price">$2.750</p>
+                    <p class="descuentos">20% off</p>
+                    <a href="#"><button class="ver-btn">VER</button></a>
+                </div>
+            </article>
 
-                    <article class="product">
-                        <img src="/images/productos/accesorios/tapaboca-trady-blanco.jpg" alt="tapaboca-trady-blanco">
-                        <div class="product-description">
-                            <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </article>
+            <article class="product">
+                <img class= "img-more" src="/images/productos/remeras/remera5.4.jpg" alt="REMERA ON">
+                <div class="product-description">
+                    <i class="fas fa-shopping-cart"></i>
+                    <p class="p-name">REMERA ON</p>
+                    <p class="p-price">$2.750</p>
+                    <p class="descuentos">20% off</p>
+                    <a href="#"><button class="ver-btn">VER</button></a>
+                </div>
+            </article>
+        <article class="product">
+            <img src="/images/productos/accesorios/billetera-collar-azul.jpg" alt="billetera-collar-azul">
+        <div class="product-description">
+            <i class="fas fa-shopping-cart"></i>
+            <p class="p-name">nombre producto</p>
+            <p class="p-price">precio</p>
+            <p class="p-descuentos">20% off</p>
+            <a href="#"><button class="ver-btn">VER</button></a>
+        </div>
+    </article>
 
-                    <article class="product">
-                        <img src="/images/productos/accesorios/billetera-colgante-tigre.jpg" alt="billetera-colgante-tigre">
-                        <div class="product-description">
-                            <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </article>
-
-                    <article class="product">
-                        <img src="/images/productos/accesorios/billetera-collar-azul.jpg" alt="billetera-collar-azul">
-                        <div class="product-description">
-                            <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </article>
-
-                    <article class="product">
-                        <img src="/images/productos/accesorios/tapaboca-trady-blanco.jpg" alt="tapaboca-trady-blanco">
-                        <div class="product-description">
-                            <i class="fas fa-shopping-cart"></i>
-                            <p class="product_name">nombre producto</p>
-                            <p class="price">precio</p>
-                            <p class="cuotas">6 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </article>
-                    <i  id ="i-carrousel" class="fas fa-arrow-right"></i>
-            </section>
+    <article class="product">
+            <img src="/images/productos/accesorios/tapaboca-trady-blanco.jpg" alt="tapaboca-trady-blanco">
+        <div class="product-description">
+            <i class="fas fa-shopping-cart"></i>
+            <p class="p-name">nombre producto</p>
+            <p class="p-price">precio</p>
+            <p class="p-descuentos">20% off</p>
+            <a href="#"><button class="ver-btn">VER</button></a>
+        </div>
+    </article>
+        
+    <i class="fas fa-arrow-right"></i>
+    </section>
             <section class="ver-mas">
                 <p>Ver más productos</p>
                 <button type="submit"><i class="fas fa-arrow-down"></i></button>
