--- a/views/register.html
+++ b/views/register.html
@@ -8,7 +8,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/register.css">
         <title>X-Person | Registro</title>
     </head>
     <body>
@@ -66,6 +65,12 @@
         
             <section class="forms">
                 <form action="/" method="post">
+                    <div class="google">
+                        <button type="submit"><i class="fab fa-google"></i> Registrate con Google</button>
+                    </div>
+                    <div class="facebook">
+                        <button type="submit"><i class="fab fa-facebook"></i> Registrate con Facebook</button>
+                    </div>
                     <div class="nombreApellido">
                         <label for="nya">Nombre<b>(*)</b><input type="text" name="nombreApellido" id="nya" minlength="3" required></label>
                     </div>
