--- a/views/register.html
+++ b/views/register.html
@@ -89,7 +89,7 @@
                 </form>
                 <div class="carrousel">
                     <!-- <i class="fas fa-arrow-left"></i> -->
-                    <img src="/images/sale-banner.jpg" alt="banner">
+                    <img src="/images/banner-l-r.jpg" alt="banner">
                     <!-- <i class="fas fa-arrow-right"></i> -->
                 </div>
         
