--- a/views/login.html
+++ b/views/login.html
@@ -62,6 +62,11 @@
             <h1>Inciar sesión</h1>
         </section>
         <section class=forms>
+            <div class="carrousel">
+                <!-- <i class="fas fa-arrow-left"></i> -->
+                <img src="/images/banner-l-r.jpg" alt="banner">
+                <!-- <i class="fas fa-arrow-right"></i> -->
+            </div>
             <form action="/index" method="post">
                 <div class="google">
                     <button type="submit"><i class="fab fa-google"></i> Registrate con Google</button>
